[package]
name = "dawctl"
version = "0.2.2"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "Razer Deathadder White Edition mouse device manager."
repository = "https://github.com/marcospb19/dawctl"
categories = ["command-line-utilities", "hardware-support"]
keywords = ["razer", "mouse", "mice", "deathadder", "hardware"]

[dependencies]
libc = "0.2.76"
nix = "0.8.1"
clap = { version = "2.33.1", features = ["wrap_help"] }
libudev = { git = "https://github.com/9ary/libudev-rs", rev = "cf7dd72" }

[profile.release]
opt-level = "s"
