[package]
name = "dawctl"
version = "0.2.2"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2021"
license = "MIT"
description = "Razer Deathadder White Edition mouse device manager."
repository = "https://github.com/marcospb19/dawctl"
categories = ["command-line-utilities", "hardware-support"]
keywords = ["razer", "mouse", "mice", "deathadder", "hardware"]

[dependencies]
libc = "0.2"
nix = "0.8.1"
libudev = { git = "https://github.com/9ary/libudev-rs", rev = "cf7dd72" }
clap = { version = "3.1.6", features = ["atty", "derive", "wrap_help"] }

[profile.release]
opt-level = "s"
